plugins {
    id 'fabric-loom' version '1.7.3'
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

archivesBaseName = project.archives_base_name + "+" + project.minecraft_version
version = project.mod_version
group = project.maven_group

repositories {
    mavenCentral()
    maven {
        url = "https://oss.sonatype.org/content/repositories/snapshots"
    }
}

loom {
    accessWidenerPath = file("src/main/resources/cesium.accesswidener")
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings loom.officialMojangMappings()
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

    include(implementation("com.github.luben:zstd-jni:1.5.6-3"))
    include(implementation("org.lmdbjava:lmdbjava:0.9.0"))

    include(implementation("com.github.jnr:jffi:1.3.12"))
    include(implementation("com.github.jnr:jffi:1.3.12:native"))
    include(implementation("com.github.jnr:jnr-a64asm:1.0.0"))
    include(implementation("com.github.jnr:jnr-constants:0.10.4"))
    include(implementation("com.github.jnr:jnr-ffi:2.2.15"))
    include(implementation("com.github.jnr:jnr-x86asm:1.0.2"))
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 17
}

java {
    withSourcesJar()
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.archivesBaseName}" }
    }
}